--- a/design/style.css
+++ b/design/style.css
@@ -19,15 +19,23 @@ text-align: right;
     padding-left: 10px;
 }
 
-#main-menu{list-style: none;}
+#main-menu
+{list-style: none;}
 
 .main-items{
     display: inline-block;
-    width: 150px;
+    width: 50px;
+    height: 20px;
+}
+.ss{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+   
 }
 
-
-.main-items a {
+.menu a {
     color: lightseagreen;
     text-decoration: none;
      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -37,14 +45,14 @@ text-align: right;
     display: inline-block;
 
 }
-.main-items a:hover {background-color: rgba(5, 142, 176, 0.673);}
+.menu a:hover {background-color: rgba(5, 142, 176, 0.673);}
 .NameStock{
     color: lightseagreen;
-    text-align: left;
     background-color: rgba(0, 0, 0, 0.556);
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 2.5rem;
     border-radius: 30px;
+    text-align: left;
+    width: 105%;
 }
 /* Cover */
 .cover{
